[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/input_button/InputDisplay.gd" type="Script" id=1]
[ext_resource path="res://addons/input_button/InputDisplaySpriteFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://addons/input_button/InputDisplayOverlayFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://addons/input_button/ButtonFont.tres" type="DynamicFont" id=4]

[node name="InputDisplay" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonIcon" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
frame = 3

[node name="ButtonText" type="Label" parent="."]
margin_left = -24.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = ExtResource( 4 )
text = "A"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayIcon" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 3 )
